docs/api/qiskit/0.19/dagcircuit.mdx
---
title: dagcircuit (v0.19)
description: API reference for qiskit.dagcircuit in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.dagcircuit
---

<span id="module-qiskit.dagcircuit" />

<span id="qiskit-dagcircuit" />

<span id="dag-circuits-qiskit-dagcircuit" />

# DAG Circuits

`qiskit.dagcircuit`

## DAG Circuits

|                                                                                                        |                                                                  |
| ------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------- |
| [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")()                          | Quantum circuit as a directed acyclic graph.                     |
| [`DAGNode`](qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")(\[type, op, name, qargs, cargs, …]) | Object to represent the information at a node in the DAGCircuit. |

## Exceptions

|                                                                                                   |                                                        |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
| [`DAGCircuitError`](qiskit.dagcircuit.DAGCircuitError "qiskit.dagcircuit.DAGCircuitError")(\*msg) | Base class for errors raised by the DAGCircuit object. |

